--- a/css/main.css
+++ b/css/main.css
@@ -15,3 +15,12 @@
 .ng-valid.ng-dirty {
     border-color: #78FA89;
 }
+
+.select2 > .select2-choice.ui-select-match {
+    /* Because of the inclusion of Bootstrap */
+    height: 29px;
+}
+
+.selectize-control > .selectize-dropdown {
+    top: 36px;
+}
