--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,15 @@
 .comments, .inputComment {
-    width: 80%;
     margin: 0 auto;
+}
+
+.comments {
+    width: 83%;
+}
+
+.inputComment {
+    width: 80%;
+    border: 2px solid black;
+    padding: 10px 10px 0px;
 }
 
 .comment {
